--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "appreciation-app",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "3.5",
     "normalize.css": "^8.0.0",
+    "stimulus": "^1.0.1",
     "tachyons": "^4.9.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
   }
 }
