--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "normalize.css": "^8.0.0",
-    "stimulus": "^1.0.1",
-    "tachyons": "^4.9.1"
+    "stimulus": "^1.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
