--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "4.0.7",
-    "stimulus": "^1.0.1"
+    "glob-all": "^3.1.0",
+    "purgecss-webpack-plugin": "^1.5.0",
+    "stimulus": "^1.0.1",
+    "tailwindcss": "~1.0.5"
   },
   "devDependencies": {
     "webpack-dev-server": "3.7.2"
